--- a/articles/active-directory/managed-identities-azure-resources/index.yml
+++ b/articles/active-directory/managed-identities-azure-resources/index.yml
@@ -8,16 +8,16 @@ metadata:
   ms.service: active-directory
   ms.subservice: devices
   ms.topic: landing-page
-  author: MarkusVi
-  ms.author: markvi
+  author: barclayn
+  ms.author: barclayn
   ms.date: 08/29/2019
   ms.collection: M365-identity-device-management
-  ms.openlocfilehash: 2a403b66cfd1005e86f269d4affe4086564e291c
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 0cecb8d1b27e6e236c02e9c70ed2e24095d9ee73
+  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "70162550"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "89018342"
 landingContent:
 - title: 关于托管标识
   linkLists:
@@ -35,7 +35,7 @@ landingContent:
       url: qs-configure-cli-windows-vmss.md
     - text: PowerShell
       url: qs-configure-powershell-windows-vmss.md
-    - text: Azure 资源管理器模板
+    - text: Azure Resource Manager 模板
       url: qs-configure-template-windows-vmss.md
     - text: REST
       url: qs-configure-rest-vmss.md
