--- a/articles/key-vault/certificates/index.yml
+++ b/articles/key-vault/certificates/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: be76cd9d3c358864d1278cad77be43048dec7a71
-  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
+  ms.openlocfilehash: 5a716ad70a31342467eb0944b3e6d1f5d80d5166
+  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/17/2020
-  ms.locfileid: "88263446"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "89000900"
 landingContent:
 - title: 证书
   linkLists:
@@ -55,7 +55,7 @@ landingContent:
     - text: Python 客户端库
       url: /python/api/overview/azure/keyvault-certificates-readme?view=azure-python
     - text: Java 客户端库
-      url: https://azuresdkdocs.blob.core.windows.net/$web/java/azure-security-keyvault-certificates/4.2.0/index.html
+      url: https://apidocs.chargebee.com/docs/api?lang=java#client_library
     - text: Node.js 客户端库
       url: /javascript/api/@azure/keyvault-certificates/?view=azure-node-latest
 - title: 有关 Key Vault 的详细信息
