--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -12,19 +12,19 @@ metadata:
   author: j-martens
   ms.author: jmartens
   ms.date: 03/05/2020
-  ms.openlocfilehash: 02d90dc6781fe39e92d97d64697cc2ee32b04b31
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: e31651c07cc9567af0deac8311b2321ad6dee4ba
+  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "78331486"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "89021912"
 landingContent:
 - title: 工作室（经典）入门
   linkLists:
   - linkListType: get-started
     links:
     - text: 什么是工作室（经典）？
-      url: what-is-ml-studio.md
+      url: studio-classic-overview.md
     - text: 创建第一个 ML 试验
       url: create-experiment.md
     - text: 创建预测解决方案
@@ -47,7 +47,7 @@ landingContent:
     links:
     - text: Azure 机器学习
       url: /azure/machine-learning/
-    - text: 数据科学虚拟机
+    - text: Data Science Virtual Machine
       url: /azure/machine-learning/data-science-virtual-machine
     - text: 比较我们的 ML 产品
       url: https://docs.microsoft.com/azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/studio/context/ml-context
