--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 02/12/2020
-  ms.openlocfilehash: e5c05e41ba209607649fbcffb8ee12d0dc66029e
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: eabae1050b4892de8c30f460834d1ae4da934198
+  ms.sourcegitcommit: c6b9a46404120ae44c9f3468df14403bcd6686c1
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87079123"
+  ms.lasthandoff: 08/26/2020
+  ms.locfileid: "88890930"
 landingContent:
 - title: 关于 Azure 数字孪生
   linkLists:
@@ -23,7 +23,13 @@ landingContent:
     links:
     - text: Azure 数字孪生是什么？
       url: overview.md
-- title: 教程入门
+- title: 首先查看快速入门
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: 浏览示例方案
+      url: quickstart-adt-explorer.md
+- title: 通过教程深入了解
   linkLists:
   - linkListType: tutorial
     links:
