--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -436,6 +436,8 @@
           href: how-to-create-your-first-pipeline.md
         - name: 将数据移入 ML 管道和在 ML 管道之间移动数据的步骤 (Python)
           href: how-to-move-data-in-out-of-pipelines.md
+        - name: 部署 ML 管道 (Python)
+          href: how-to-deploy-pipelines.md
         - name: 计划管道 (Python)
           href: how-to-schedule-pipelines.md
         - name: 触发管道
