--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -520,17 +520,11 @@
           href: speech-container-faq.md
 - name: 语音 SDK
   items:
-    - name: 概述
-      items:
-        - name: 关于语音 SDK
-          href: speech-sdk.md
-        - name: 方案可用性
-          href: scenario-availability.md
-    - name: 快速入门
-      items:
-        - name: 安装语音 SDK
-          displayName: 'install the speech sdk, install the speech sdk java, install the speech sdk C#, install the speech sdk python, install the speech sdk C++, setup speech sdk, install, install C#, install C++, install Python, install Java, install Javascript'
-          href: quickstarts/setup-platform.md
+    - name: 语音 SDK 概述
+      href: speech-sdk.md
+    - name: 安装语音 SDK
+      displayName: 'install the speech sdk, install the speech sdk java, install the speech sdk C#, install the speech sdk python, install the speech sdk C++, setup speech sdk, install, install C#, install C++, install Python, install Java, install Javascript'
+      href: quickstarts/setup-platform.md
     - name: 操作指南
       items:
         - name: 启用日志记录
