--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -56,6 +56,8 @@
           href: stream-files-dotnet-quickstart.md
         - name: 利用 Node.js
           href: stream-files-nodejs-quickstart.md
+    - name: 在 Azure 日志分析中存储 AMS 事件
+      href: tutorial-events-log-analytics.md
     - name: 对上传的文件和流视频进行编码
       displayName: 'encode, encoding, job, transform'
       href: stream-files-tutorial-with-api.md
