--- a/articles/remote-rendering/how-tos/conversion/toc.yml
+++ b/articles/remote-rendering/how-tos/conversion/toc.yml
@@ -8,5 +8,5 @@
   href: configure-model-conversion.md
 - name: 在模型转换期间替代材料
   href: override-materials.md
-- name: 获取有关转换后的模型的信息
+- name: 获取转换的相关信息
   href: get-information.md
