--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -99,10 +99,14 @@
           href: troubleshoot-guide-windows-boot-manager-menu.md
         - name: 由于进行更新，VM 无响应
           href: unresponsive-vm-apply-windows-update.md
+        - name: 在应用审核配置策略时，VM 无响应
+          href: vm-unresponsive-applying-audit-configuration-policy.md
         - name: 应用组策略时，VM 无响应
           href: unresponsive-vm-apply-group-policy.md
         - name: 应用安全策略时，VM 无响应
           href: unresponsive-vm-apply-security-policy.md
+        - name: Windows 停止错误 - 错误系统配置信息
+          href: windows-stop-error-bad-system-config-info.md
         - name: Windows 停止错误 - 状态无内存
           href: troubleshoot-windows-stop-error.md
 - name: 无法连接到 VM
