--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -329,6 +329,28 @@
       items:
         - name: 数据收集规则
           href: platform/data-collection-rule-overview.md
+        - name: 代理数据源
+          items:
+            - name: 概述
+              href: platform/agent-data-sources.md
+            - name: Windows 事件
+              href: platform/data-sources-windows-events.md
+            - name: 自定义 JSON 数据
+              href: platform/data-sources-json.md
+            - name: CollectD 性能数据
+              href: platform/data-sources-collectd.md
+            - name: Syslog
+              href: platform/data-sources-syslog.md
+            - name: 性能计数器
+              href: platform/data-sources-performance-counters.md
+            - name: Linux 应用程序性能
+              href: platform/data-sources-linux-applications.md
+            - name: IIS 日志
+              href: platform/data-sources-iis-logs.md
+            - name: 自定义日志
+              href: platform/data-sources-custom-logs.md
+            - name: 自定义字段
+              href: platform/custom-fields.md
         - name: 自定义指标
           items:
             - name: 自定义指标
@@ -361,6 +383,24 @@
             - name: 数据收集
               displayname: 'data collection rule,Azure Monitor agent'
               href: platform/data-collection-rule-azure-monitor-agent.md
+        - name: Log Analytics 代理
+          items:
+            - name: 概述
+              href: platform/log-analytics-agent.md
+            - name: Windows 代理
+              href: platform/agent-windows.md
+            - name: Linux 代理
+              href: platform/agent-linux.md
+            - name: 适用于 Windows 的 VM 扩展
+              href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
+            - name: 适用于 Linux 的 VM 扩展
+              href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
+            - name: Log Analytics 网关
+              href: platform/gateway.md
+            - name: 代理管理
+              href: platform/agent-manage.md
+            - name: 代理运行状况
+              href: insights/solution-agenthealth.md
         - name: Azure 诊断扩展
           items:
             - name: 概述
@@ -403,47 +443,7 @@
                   href: ../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/azure-monitor/toc.json
                 - name: 使用 Telegraf 收集指标
                   href: platform/collect-custom-metrics-linux-telegraf.md
-        - name: Log Analytics 代理
-          items:
-            - name: 概述
-              href: platform/log-analytics-agent.md
-            - name: Windows 代理
-              href: platform/agent-windows.md
-            - name: Linux 代理
-              href: platform/agent-linux.md
-            - name: 适用于 Windows 的 VM 扩展
-              href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
-            - name: 适用于 Linux 的 VM 扩展
-              href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
-            - name: Log Analytics 网关
-              href: platform/gateway.md
-            - name: 代理管理
-              href: platform/agent-manage.md
-            - name: 代理运行状况
-              href: insights/solution-agenthealth.md
-            - name: 数据源
-              items:
-                - name: 概述
-                  href: platform/agent-data-sources.md
-                - name: Windows 事件
-                  href: platform/data-sources-windows-events.md
-                - name: 自定义 JSON 数据
-                  href: platform/data-sources-json.md
-                - name: CollectD 性能数据
-                  href: platform/data-sources-collectd.md
-                - name: Syslog
-                  href: platform/data-sources-syslog.md
-                - name: 性能计数器
-                  href: platform/data-sources-performance-counters.md
-                - name: Linux 应用程序性能
-                  href: platform/data-sources-linux-applications.md
-                - name: IIS 日志
-                  href: platform/data-sources-iis-logs.md
-                - name: 自定义日志
-                  href: platform/data-sources-custom-logs.md
-                - name: 自定义字段
-                  href: platform/custom-fields.md
-        - name: 疑难解答
+        - name: 故障排除
           items:
             - name: Log Analytics VM 扩展
               displayname: 'troubleshoot, troubleshooting'
@@ -637,7 +637,7 @@
                 - name: Spring Boot 应用
                   displayname: java
                   href: /java/azure/spring-framework/configure-spring-boot-java-applicationinsights
-                - name: 疑难解答
+                - name: 故障排除
                   href: app/java-troubleshoot.md
             - name: Node.js
               href: app/nodejs.md
