--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -58,7 +58,15 @@
             - name: 通过 Azure AD 进行身份验证和授权
               href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: 通过共享密钥进行授权
-              href: /rest/api/storageservices/authorize-with-shared-key
+              items:
+                - name: 查看和管理帐户密钥
+                  href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                - name: 配置连接字符串
+                  href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                - name: 阻止通过共享密钥进行授权
+                  href: ../common/shared-key-authorization-prevent.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                - name: 使用 Azure 存储 REST API
+                  href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: 通过 SAS 进行授权
               href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: 授权管理操作
@@ -150,6 +158,8 @@
                   href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
                 - name: 使用 Azure 存储 REST API
                   href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                - name: 阻止通过共享密钥进行授权
+                  href: ../common/shared-key-authorization-prevent.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: 管理 Azure 存储加密
           items:
             - name: 创建支持客户管理的密钥的帐户
@@ -226,7 +236,7 @@
           href: storage-powershell-how-to-use-queues.md
         - name: 将 PowerShell 用于中国云、政府云和德国云
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: 疑难解答
+    - name: 故障排除
       items:
         - name: 延迟问题
           href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
