--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: bd8c72593bf88289234ce281710b8be249e0966b
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: dfecc160962fca67e08e48b1e5b266d3899a4675
+  ms.sourcegitcommit: 8a7b82de18d8cba5c2cec078bc921da783a4710e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85564511"
+  ms.lasthandoff: 08/28/2020
+  ms.locfileid: "89048683"
 highlightedContent:
   items:
   - title: 治理概述
@@ -194,7 +194,7 @@ additionalContent:
       - text: Azure SDK for Go
         url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph
       - text: 用于 Java 的 Azure SDK
-        url: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
+        url: /java/api/overview/azure/resourcegraph/management
       - text: 用于 Java 的 Azure SDK
         url: https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar
         note: (Maven)
