--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -234,13 +234,23 @@
       href: custom-disaster-recovery.md
     - name: 跟踪异步 REST 操作
       href: ../azure-resource-manager/management/async-operations.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: 移动
+      items:
+        - name: 跨区域移动系统主题
+          href: move-system-topics-across-regions.md
+        - name: 跨区域移动自定义主题
+          href: move-custom-topics-across-regions.md
+        - name: 跨区域移动域
+          href: move-domains-across-regions.md
+        - name: 跨区域移动合作伙伴命名空间
+          href: move-partner-namespaces-across-regions.md
     - name: 安全
       items:
         - name: 配置专用终结点
           href: configure-private-endpoints.md
         - name: 配置 IP 防火墙
           href: configure-firewall.md
-        - name: 通过 AAD 保护 WebHook
+        - name: 通过 Azure Active Directory 保护 Webhook
           href: secure-webhook-delivery.md
         - name: 使用托管标识进行事件传送
           href: managed-service-identity.md
