--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -97,7 +97,7 @@
         - name: Azure SDK for Go
           href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
         - name: 用于 Java 的 Azure SDK
-          href: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
+          href: /java/api/overview/azure/resourcegraph/management
         - name: 用于 Java 的 Azure SDK (Maven)
           href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
         - name: 用于 JavaScript 的 Azure SDK
